--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   "license": "Apache-2.0",
   "autoload": {
     "psr-4": {
-      "Rhubarb\\TwigView\\": "src/"
+      "Rhubarb\\Leaf\\TwigView\\": "src/"
     }
   },
   "require": {
